# incident-commander

./: .gitignore  BLOG.md  Dockerfile  IncidentCommanderEnv_Project_Document.docx  PRODUCT_DOCUMENT.md  PaymentGuard_Research_Synthesis.md  README.md  baseline_results.json  coreideation.md  finohack_ideation.md  inference.py  openenv.yaml  pyproject.toml
docs/: blog.md  video_script.md
incident_commander_env/: __init__.py  models.py  openenv.yaml
incident_commander_env/server/: app.py  coach.py  environment.py  incidents.py  integrations.py  ops_endpoints.py  report_pdf.py
incident_commander_env/server/actions/: handlers.py  sandboxed_shell.py
incident_commander_env/server/backends/: __init__.py  docker_ops.py  protocol.py  real.py  sim.py  website.py
incident_commander_env/server/grading/: components.py  grader.py  (+2 more)
results/: baseline_summary.json  comparison_summary.json  throughput.json
results/hf_dataset/: README.md  manifest.json  raw.jsonl  sft.jsonl
scripts/: benchmark_throughput.py  build_project_doc.py  build_train_notebook.py  export_trajectories.py  generate_baseline_plots.py  generate_comparison_plot.py
server/: app.py
tests/: test_api.py  test_backend_protocol.py  test_code_investigator.py  test_environment.py  test_grading.py  test_new_scenarios.py  test_observe_mode.py  test_phase2.py  test_real_backend.py  test_realtime_endpoints.py  test_reward_components.py  test_reward_hacks.py  test_seeded_reproducibility.py  test_training_modules.py  test_website_backend.py
training/: __init__.py  code_investigator.py  curriculum.py  datasets.py  episode_logger.py  eval_runner.py  grpo_reward.py  plots.py  postmortem_writer.py  train_grpo.ipynb  train_sft.ipynb
(+27 files in other folders)
