[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-commander-env"
version = "0.1.0"
description = "SRE Incident Response environment for OpenEnv - AI agent diagnoses and remediates production incidents"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.1",
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
server = "incident_commander_env.server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.25.0",
]
training = [
    "transformers>=4.45",
    "trl>=0.13,<0.16",
    "datasets>=2.14",
    "peft>=0.10",
    "accelerate>=0.30",
    "bitsandbytes>=0.43",
    "matplotlib>=3.7",
    "huggingface-hub>=0.20",
]

[tool.setuptools.packages.find]
include = ["incident_commander_env*", "training*"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
